--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 DESCRIPTION
 
-HALOGEN is a tool to generate spherically symmetric initial conditions for N-body simulations. A large family of radial density profiles is supported. The initial conditions are sampled from the full distribution function. The details of the method are given in Zemp et al., 2008, Monthly Notices of the Royal Astronomical Society, Volume 386, Issue 3, pp. 1543-1556 (ADS: http://adsabs.harvard.edu/abs/2008MNRAS.386.1543Z).
+Halogen is a tool to generate spherically symmetric initial conditions for N-body simulations. A large family of radial density profiles is supported. The initial conditions are sampled from the full distribution function. The details of the method are given in Zemp et al., 2008, Monthly Notices of the Royal Astronomical Society, Volume 386, Issue 3, pp. 1543-1556 (ADS: http://adsabs.harvard.edu/abs/2008MNRAS.386.1543Z).
 
 
 AUTHOR
@@ -21,7 +21,11 @@ iof library (https://github.com/mzemp/iof)
 
 COMPILATION
 
-First, clone or download the code from GitHub. In order to compile the code, just type make in the halogen code directory:
+First, make sure you have installed the iof library. The Makefile assumes that you have installed that in a local library path (e.g. ~/libraries/ under your home directory) and the following environment variable is set (e.g. in your .bashrc file):
+
+export LOCAL_LIB_PATH=~/libraries
+
+Then, clone or download the code from GitHub. In order to compile the code, just type make in the halogen code directory:
 
 $> make
 
